--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Roboto-Regular';
+  font-weight: normal;
+  src: url('./fonts/Roboto-Regular.ttf') format('truetype');
+}
+
+body {
+  font-family: 'Roboto-Regular';
+}
