--- a/src/pages/MainPage/MyGroup/style.module.css
+++ b/src/pages/MainPage/MyGroup/style.module.css
@@ -1,9 +1,8 @@
-.slick_custom :global .slick-list {
+/* .swiper_custom :global {
   overflow: visible;
-  margin-left: -10px !important;
 }
 
-.slick_custom :global .slick-list .slick-slide {
+.swiper_custom :global .slick-list .slick-slide {
   opacity: 0;
   transition-property: opacity, visibility;
   transition-duration: 0.2s;
@@ -11,6 +10,11 @@
   margin-left: 10px;
 }
 
-.slick_custom :global .slick-list .slick-slide.slick-active {
+.swiper_custom :global .slick-list .slick-slide.slick-active {
   opacity: 1;
-}
+} */
+/* 
+.swiper-slide {
+  box-shadow: 0px 15px 50px 0px rgba(0, 0, 0, 0.08), 0px 1px 8px 0px rgba(0, 0, 0, 0.01),
+    0px 3px 130px 0px rgba(0, 0, 0, 0.06), 0px 12px 43.24px 2.76px rgba(0, 0, 0, 0.14);
+} */
