--- a/src/pages/CalendarPage/index.css
+++ b/src/pages/CalendarPage/index.css
@@ -30,8 +30,8 @@
 .react-calendar .react-calendar__month-view__days__day {
   padding: 4px;
   display: flex;
-  justify-content: start;
-  align-items: start;
+  justify-content: flex-start;
+  align-items: flex-start;
   flex-direction: column;
   height: 10vw;
 }
