--- a/src/pages/CreateGroupPage/index.css
+++ b/src/pages/CreateGroupPage/index.css
@@ -1,3 +1,15 @@
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
 /* The switch - the box around the slider */
 .switch {
   position: relative;
@@ -8,9 +20,9 @@
 }
 
 /* Hide default HTML checkbox */
-.switch input {
+/* .switch input {
   display: none;
-}
+} */
 
 /* The slider */
 .slider {
@@ -65,4 +77,14 @@ p {
   display: inline-block;
   font-size: 15px;
   font-weight: bold;
+}
+
+.image-item {
+  width: 300px;
+  height: 300px;
+  background-image: url();
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 1px solid black;
 }
