feat: 캘린더 페이지 구현중
- 선택된 일정 상태값 구현 완료
- 디자인 및 API 기능 구현 필요

--- a/src/pages/CalendarPage/index.css
+++ b/src/pages/CalendarPage/index.css
@@ -28,3 +28,9 @@
 .react-calendar abbr {
   text-decoration: none;
 }
+
+/* 모달  */
+
+.calendar-modal .time-period button {
+  @apply flex justify-center;
+}
