--- a/src/pages/ChatPage/InputField/InputField.css
+++ b/src/pages/ChatPage/InputField/InputField.css
@@ -30,13 +30,13 @@
   border-color: white;
 }
 
-input {
+.input {
   border: none;
   width: 100%;
   height: 100%;
   padding-left: 5px;
 }
-input:focus {
+.input:focus {
   outline: none;
 }
 
