--- a/src/pages/ChatPage/InputField/InputField.css
+++ b/src/pages/ChatPage/InputField/InputField.css
@@ -1,9 +1,7 @@
 .input-area {
-  background-color: green;
+  background-color: #f7e600;
   min-height: 50px;
   display: flex;
-  position: absolute;
-  bottom: 0;
   width: 100%;
 }
 .plus-button {
@@ -30,13 +28,13 @@
   border-color: white;
 }
 
-.input {
+.MuiInput-input {
   border: none;
   width: 100%;
   height: 100%;
   padding-left: 5px;
 }
-.input:focus {
+.MuiInput-input:focus {
   outline: none;
 }
 
@@ -48,7 +46,4 @@
 }
 .send-button:hover {
   cursor: pointer;
-}
-.send-button:active {
-  background-color: yellow;
 }
