--- a/src/pages/ChatPage/MessageContainer/MessageContainer.css
+++ b/src/pages/ChatPage/MessageContainer/MessageContainer.css
@@ -1,8 +1,15 @@
+/* 채팅창 스크롤바 속성 */
+.message-container::-webkit-scrollbar {
+  background: transparent; /* 스크롤바의 배경을 투명으로 설정합니다. */
+  display: none;
+}
+
 .system-message-container {
   display: flex;
 
   justify-content: center;
   align-items: center;
+  margin-bottom: 5px;
 }
 
 .system-message {
