--- a/src/pages/ChatPage/index.css
+++ b/src/pages/ChatPage/index.css
@@ -1,10 +1,7 @@
-.App {
-  height: 100vh;
-  background-image: url('../../../public/img/background.png');
-  margin-left: auto;
-  margin-right: auto;
+.chatContainer {
+  margin: 0 auto;
   max-width: 28rem;
-  position: relative;
+  height: 900px;
 }
 
 nav {
