--- a/src/pages/ChatPage/MessageContainer/MessageContainer.css
+++ b/src/pages/ChatPage/MessageContainer/MessageContainer.css
@@ -4,52 +4,85 @@
   display: none;
 }
 
-.system-message-container {
+.message-container {
   display: flex;
-
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 5px;
-}
-
-.system-message {
-  background-color: #55667758;
-  border-radius: 100px;
-  text-align: center;
-  color: white;
-  padding: 2px 15px;
-  font-size: 14px;
-}
-.my-message-container {
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 5px;
-}
-.my-message {
-  background-color: #f7e600;
-  border-radius: 8px;
-  padding: 8px;
-  max-width: 200px;
-  font-size: 12px;
-}
-
-.your-message-container {
-  display: flex;
+  flex-direction: column;
   justify-content: flex-start;
   /* margin-bottom: 5px; */
   align-items: center;
 }
-.your-message {
-  background-color: white;
-  border-radius: 8px;
-  padding: 8px;
-  max-width: 200px;
-  font-size: 12px;
+
+.message-one-container {
+  display: flex;
+  align-items: center;
+  color: #eee !important;
+  line-height: 1.5em;
+  margin-top: 0.9em;
+  font-weight: 400;
 }
 
-.profile-image {
+.message {
+}
+
+.message-container > div {
+  text-shadow: 0 0 0.05em #000, 0 0 0.05em #000, 0 0 0.05em #000, 0 0 0.05em #000, 0 0 0.05em #000, 0 0 0.05em #000,
+    0 0 0.05em #000, 0 0 0.05em #000, 0 0 0.05em #000, 0 0 0.05em #000, 0 0 0.05em #000, 0 0 0.05em #000,
+    0 0 0.05em #000, 0 0 0.05em #000, 0 0 0.05em #000, 0 0 0.05em #000, 0.05em 0.05em 0.05em #000,
+    0.05em 0.05em 0.05em #000, 0.05em 0.05em 0.05em #000, 0.05em 0.05em 0.05em #000, 0.05em 0.05em 0.05em #000,
+    0.05em 0.05em 0.05em #000, 0.05em 0.05em 0.05em #000, 0.05em 0.05em 0.05em #000, 0.05em 0.05em 0.05em #000,
+    0.05em 0.05em 0.05em #000, 0.05em 0.05em 0.05em #000, 0.05em 0.05em 0.05em #000, 0.05em 0.05em 0.05em #000,
+    0.05em 0.05em 0.05em #000, 0.05em 0.05em 0.05em #000, 0.05em 0.05em 0.05em #000;
+  animation: fadeInUp 0.5s ease, fadeOut 1s ease 3s forwards;
+}
+
+.message-one-container .colon {
+  margin-right: 0.7em;
+}
+
+.message-one-container .user-name {
+  margin-right: -0.2em;
+  font-weight: 700;
+}
+
+span.meta0 {
+  color: #37b737 !important;
+}
+
+span.meta1 {
+  color: #2a74ff !important;
+}
+
+span.meta2 {
+  color: #56bfa8 !important;
+}
+
+span.meta3 {
+  color: #fb6767 !important;
+}
+
+span.meta4 {
+  color: #1cc24d !important;
+}
+
+span.meta5 {
+  color: #8383de !important;
+}
+
+span.meta6 {
+  color: #49cc49 !important;
+}
+
+span.meta7 {
+  color: #dc8444 !important;
+}
+
+span.meta8 {
+  color: #ff4a4a !important;
+}
+
+/* .profile-image {
   width: 38px;
   height: 38px;
   border-radius: 100px;
   margin-right: 10px;
-}
+} */
