--- a/src/pages/CalendarPage/index.css
+++ b/src/pages/CalendarPage/index.css
@@ -1,21 +1,42 @@
 .calendar .react-calendar {
-  @apply w-full;
+  @apply w-full shadow-2xl border-none;
+}
+
+.react-calendar .react-calendar__navigation button {
+  @apply text-2xl;
 }
 .react-calendar .react-calendar__tile--active {
-  @apply relative bg-inherit text-inherit;
+  @apply relative bg-transparent text-inherit;
 }
 
-.react-calendar .react-calendar__tile--active::before {
-  @apply content-[''] absolute w-full h-full border border-black inset-0;
+.react-calendar .react-calendar__month-view__days__day::before {
+  @apply content-[''];
+  transition: border-color 0.25s;
 }
 
+.react-calendar .react-calendar__month-view__days__day.react-calendar__tile--active::before {
+  @apply absolute m-auto w-10/12 h-5/6 rounded-full border border-slate-500 inset-0;
+}
+
+/* 날짜 텍스트 */
+.react-calendar .react-calendar__month-view__days__day abbr {
+  position: relative;
+  z-index: 10;
+}
+
+/* 모든 날짜 */
+.react-calendar .react-calendar__month-view__days__day:hover::before {
+  @apply rounded-full w-10/12 h-5/6 absolute bg-slate-300;
+}
+
+/* 모든 날짜 마우스 오버시 */
 .react-calendar .react-calendar__tile:enabled:hover,
 .react-calendar .react-calendar__tile:enabled:focus {
+  @apply bg-inherit;
 }
 
-.react-calendar .react-calendar__tile--active:enabled:hover,
-.react-calendar .react-calendar__tile--active:enabled:focus {
-  background: initial;
+.react-calendar .react-calendar__month-view__weekdays {
+  @apply mb-6;
 }
 
 /* 빨간날 */
@@ -24,17 +45,20 @@
 }
 
 .react-calendar .react-calendar__month-view__days__day {
-  @apply h-28 flex justify-start items-start flex-col p-1;
+  @apply aspect-square flex justify-center items-center flex-col p-1 relative;
 }
 
 /* 할 일 달력에 표시 */
 .react-calendar .react-calendar__month-view__days__day p {
-  @apply truncate w-full mb-1 p-1 bg-red-200 rounded-md;
+  @apply truncate w-7 mb-1 absolute h-1 bg-red-400 rounded-sm top-1;
 }
 
 /* 오늘 날짜 selected */
 .react-calendar .react-calendar__tile--now {
-  background: none;
+  @apply relative bg-inherit;
+}
+.react-calendar .react-calendar__tile--now:before {
+  @apply w-10/12 h-5/6 !bg-indigo-400 rounded-full absolute;
 }
 
 .react-calendar abbr {
