styles: 반응형 수정

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@
   background: transparent; /* 스크롤바의 배경을 투명으로 설정합니다. */
   display: none;
 }
+
+@media (max-width: 480px) {
+  html {
+    font-size: 80%;
+  }
+}
