--- a/src/index.css
+++ b/src/index.css
@@ -6,18 +6,31 @@
   html {
     font-family: 'Roboto', system-ui, sans-serif;
   }
+
   textarea {
     resize: none;
   }
-}
 
-::-webkit-scrollbar {
-  background: transparent; /* 스크롤바의 배경을 투명으로 설정합니다. */
-  display: none;
-}
+  section + section {
+    @apply mt-12;
+  }
 
-@media (max-width: 480px) {
-  html {
-    font-size: 80%;
+  h2 {
+    @apply text-2xl font-bold mb-8;
+  }
+
+  h3 {
+    @apply text-lg font-semibold mb-5;
+  }
+
+  @media (max-width: 480px) {
+    html {
+      font-size: 14px;
+    }
+  }
+
+  ::-webkit-scrollbar {
+    background: transparent; /* 스크롤바의 배경을 투명으로 설정합니다. */
+    display: none;
   }
 }
